.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glbanktxn__c.object
<CustomObject>
    <description>glbanktxn__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <description>altextid</description>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_checknumb__c</fullName>
        <formula>IF(ISNUMBER(rstkf__glbanktxn_checknumb__c), VALUE(rstkf__glbanktxn_checknumb__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number value of Check Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>Id</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>TEXT (rstkf__glbanktxn_tranid__c) + &apos;-&apos; +  TEXT( rstkf__glbanktxn_txndate__c )</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_appayd__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payment Record</label>
        <referenceTo>rstkf__appayd__c</referenceTo>
        <relationshipLabel>Bank Account Transactions</relationshipLabel>
        <relationshipName>glbanktxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_arcashd__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cash receipts payment record</label>
        <referenceTo>rstkf__arcashd__c</referenceTo>
        <relationshipLabel>Bank Account Transactions</relationshipLabel>
        <relationshipName>glbanktxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_arcashh__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cash receipts deposit header</label>
        <referenceTo>rstkf__arcashh__c</referenceTo>
        <relationshipLabel>Bank Account Transactions</relationshipLabel>
        <relationshipName>glbanktxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_bankamt__c</fullName>
        <label>Sys Txn Amt – Bank Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_bankcr__c</fullName>
        <label>Bank Currency Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_bankcurr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bank Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Bank Account Transactions</relationshipLabel>
        <relationshipName>glbanktxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_bankdr__c</fullName>
        <label>Bank Currency Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_bankpayexchrate__c</fullName>
        <label>Bank-Pay Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_banksyforexschedno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Foreign Exchange Bank Rate Schedule</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>Bank Account Transactions (Foreign Exchange Pay Rate Schedule)</relationshipLabel>
        <relationshipName>bankglbanktxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_checknumb__c</fullName>
        <label>Check #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_comment__c</fullName>
        <label>Transaction Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_glbankacct__c</fullName>
        <label>Bank Account</label>
        <referenceTo>rstkf__glbankacct__c</referenceTo>
        <relationshipLabel>Bank Account Transactions</relationshipLabel>
        <relationshipName>glbanktxns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_glbankcardtxn2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Bank Card Transaction</description>
        <inlineHelpText>Once a Bank Card transaction has been processed, this field is populated with a lookup to the associated Bank Card Transaction.</inlineHelpText>
        <label>Bank Card Transaction</label>
        <referenceTo>rstkf__glbankcardtxn__c</referenceTo>
        <relationshipLabel>Bank Account Transactions (Bank Card Transaction)</relationshipLabel>
        <relationshipName>glbanktxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_glbankcardtxn_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Z_OBSOLETE</description>
        <inlineHelpText>Bank Card Transaction</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstkf__glbanktxn__c</referenceTo>
        <relationshipLabel>Bank Account Transactions</relationshipLabel>
        <relationshipName>Bank_Account_Transactions_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_glbankstmtd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Back Statement Cross-Reference</description>
        <inlineHelpText>This is a link to the bank statement line to which this transaction has been reconciled.</inlineHelpText>
        <label>Back Statement Cross-Reference</label>
        <referenceTo>rstkf__glbankstmtd__c</referenceTo>
        <relationshipLabel>Bank Account Transactions</relationshipLabel>
        <relationshipName>Bank_Account_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_homeamt__c</fullName>
        <label>Home Curr Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_homecr__c</fullName>
        <label>Home Currency Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_homecurr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Home Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Bank Account Transactions (Home currency)</relationshipLabel>
        <relationshipName>glbanktxns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_homedr__c</fullName>
        <label>Home Currency Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_homepayexchrate__c</fullName>
        <inlineHelpText>The  ‘Foreign Currency’ can be the Bank Curr and the functional currency can be the Home Curr  - and the GLBANKTXN_HOMEPAYEXCHRATE is set to the spot exchange rate.</inlineHelpText>
        <label>Bank-Home Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_homesyforexschedno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Foreign Exchange Home Rate Schedule</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>Bank Account Transactions</relationshipLabel>
        <relationshipName>homeglbanktxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_payamt__c</fullName>
        <label>Pay Curr Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_paycr__c</fullName>
        <label>Pay Currency Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_paycurr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pay Curr</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Bank Account Transactions (Payment currency)</relationshipLabel>
        <relationshipName>glbanktxn2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_paydr__c</fullName>
        <label>Pay Currency Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_payref__c</fullName>
        <label>Payment Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_reconciled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconciled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_reconsel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected for Reconciliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_reference__c</fullName>
        <formula>IF(ISPICKVAL(rstkf__glbanktxn_trantype__c, &quot;AP Check&quot;) == true , rstkf__glbanktxn_checknumb__c,  IF(ISPICKVAL(rstkf__glbanktxn_trantype__c, &quot;AR Cash Deposit&quot;) == true, rstkf__glbanktxn_payref__c,  rstkf__glbanktxn_comment__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_remitadvice__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Remittance Advice Check Stub</label>
        <referenceTo>rstkf__appayd__c</referenceTo>
        <relationshipLabel>Bank Account Transactions (Remittance Advice Check Stub)</relationshipLabel>
        <relationshipName>glbanktxns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_reportedamt__c</fullName>
        <label>Bank Reported Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_tranid__c</fullName>
        <label>Transaction ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_trantype__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP Check</fullName>
                </value>
                <value>
                    <fullName>AP Cash Payment</fullName>
                </value>
                <value>
                    <fullName>AP EFT Payment (General)</fullName>
                </value>
                <value>
                    <fullName>AP ACH Payment</fullName>
                </value>
                <value>
                    <fullName>AP Credit Card Payment</fullName>
                </value>
                <value>
                    <fullName>AP ACH/EFT Fees</fullName>
                </value>
                <value>
                    <fullName>AP Payment Variance, Single Currency</fullName>
                </value>
                <value>
                    <fullName>AP Payment Variance, Multi-Currency</fullName>
                </value>
                <value>
                    <fullName>AP Voided Check</fullName>
                </value>
                <value>
                    <fullName>AP Other Voided Payment</fullName>
                </value>
                <value>
                    <fullName>AR Cash Deposit</fullName>
                </value>
                <value>
                    <fullName>AR Credit Card Payment</fullName>
                </value>
                <value>
                    <fullName>AR Cash Deposit Variance, Single Currency</fullName>
                </value>
                <value>
                    <fullName>AR Cash Deposit Variance, Multi-Currency</fullName>
                </value>
                <value>
                    <fullName>AR ACH/EFT Payment Reported by Bank</fullName>
                </value>
                <value>
                    <fullName>Bank Fees/Service Charges</fullName>
                </value>
                <value>
                    <fullName>Bank Reports Credit Card Deposit</fullName>
                </value>
                <value>
                    <fullName>Bank Reports Credit Card Payment</fullName>
                </value>
                <value>
                    <fullName>Transfer Variances</fullName>
                </value>
                <value>
                    <fullName>All Other Adjustments</fullName>
                </value>
                <value>
                    <fullName>Transfers/Adjustments Made by JE</fullName>
                </value>
                <value>
                    <fullName>Credit Card Processing Fee</fullName>
                </value>
                <value>
                    <fullName>Interest Income</fullName>
                </value>
                <value>
                    <fullName>Interest Expense</fullName>
                </value>
                <value>
                    <fullName>Bank Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_txndate__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_uploadtxn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Uploaded Transaction</description>
        <inlineHelpText>Uploaded Transaction</inlineHelpText>
        <label>Uploaded Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_vendorpaid__c</fullName>
        <formula>rstkf__glbanktxn_appayd__r.rstkf__appayd_vendno__r.rstk__povend_sf_account_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>When the bank transaction is for an AP Payment, this field hold the name of the vendor associated with the payment.</inlineHelpText>
        <label>Vendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_viewbankamt__c</fullName>
        <formula>rstkf__glbanktxn_bankdr__c - rstkf__glbanktxn_bankcr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Amount - Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_viewhomeamt__c</fullName>
        <formula>rstkf__glbanktxn_homedr__c - rstkf__glbanktxn_homecr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Amount - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_viewpayamt__c</fullName>
        <formula>rstkf__glbanktxn_paydr__c - rstkf__glbanktxn_paycr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Amount - Pay Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_voidcheckind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voided Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_voidstatus__c</fullName>
        <description>Voiding Check Process Status</description>
        <label>Voiding Check Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glbanktxn_xreftranid__c</fullName>
        <inlineHelpText>If populated, this is the GLBANKTXN_TRANID of a transaction being modified (voided or variance recorded against it).</inlineHelpText>
        <label>Modifies Trans ID#</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Bank Account Transaction</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glbanktxn_glbankacct__c</columns>
        <columns>rstkf__glbanktxn_checknumb__c</columns>
        <columns>rstkf__glbanktxn_txndate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>rstkf__glbanktxn_voidcheckind__c</columns>
        <columns>rstkf__glbanktxn_trantype__c</columns>
        <columns>rstkf__glbanktxn_payamt__c</columns>
        <columns>rstkf__glbanktxn_homeamt__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Bank_Account_Transactions</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glbanktxn_glbankacct__c</columns>
        <columns>rstkf__glbanktxn_checknumb__c</columns>
        <columns>rstkf__glbanktxn_trantype__c</columns>
        <columns>rstkf__glbanktxn_payamt__c</columns>
        <columns>rstkf__glbanktxn_paydr__c</columns>
        <columns>rstkf__glbanktxn_paycr__c</columns>
        <columns>rstkf__glbanktxn_txndate__c</columns>
        <columns>rstkf__glbanktxn_glbankstmtd__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__glbanktxn_reconciled__c</columns>
        <columns>rstkf__glbanktxn_appayd__c</columns>
        <columns>rstkf__glbanktxn_reconsel__c</columns>
        <columns>rstkf__glbanktxn_payref__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glbanktxn_glbankacct__c</field>
            <operation>contains</operation>
            <value>UFX Bank Acc</value>
        </filters>
        <label>Bank Account Transactions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Bank_Account_TransactionsJSF</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glbanktxn_reconciled__c</columns>
        <columns>rstkf__glbanktxn_voidcheckind__c</columns>
        <columns>rstkf__glbanktxn_trantype__c</columns>
        <columns>rstkf__glbanktxn_checknumb__c</columns>
        <columns>rstkf__glbanktxn_txndate__c</columns>
        <columns>rstkf__glbanktxn_homeamt__c</columns>
        <columns>rstkf__glbanktxn_payref__c</columns>
        <columns>rstkf__glbanktxn_glbankacct__c</columns>
        <columns>rstkf__glbanktxn_bankcurr__c</columns>
        <columns>rstkf__glbanktxn_homecurr__c</columns>
        <columns>rstkf__glbanktxn_tranid__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__glbanktxn_bankamt__c</columns>
        <columns>rstkf__glbanktxn_payamt__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glbanktxn_trantype__c</field>
            <operation>equals</operation>
            <value>AP Check</value>
        </filters>
        <label>Bank Account Transactions JSF</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Bank_Account_TransactionsJSFUFX</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glbanktxn_reconciled__c</columns>
        <columns>rstkf__glbanktxn_trantype__c</columns>
        <columns>rstkf__glbanktxn_checknumb__c</columns>
        <columns>rstkf__glbanktxn_homeamt__c</columns>
        <columns>rstkf__glbanktxn_payref__c</columns>
        <columns>rstkf__glbanktxn_glbankacct__c</columns>
        <columns>rstkf__glbanktxn_bankcurr__c</columns>
        <columns>rstkf__glbanktxn_homecurr__c</columns>
        <columns>rstkf__glbanktxn_tranid__c</columns>
        <columns>rstkf__glbanktxn_txndate__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__glbanktxn_bankamt__c</columns>
        <columns>rstkf__glbanktxn_payamt__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glbanktxn_glbankacct__c</field>
            <operation>contains</operation>
            <value>UFX</value>
        </filters>
        <label>Bank Account Transactions JSF UFX</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Bank_Account_Transactions_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glbanktxn_glbankacct__c</columns>
        <columns>rstkf__glbanktxn_comment__c</columns>
        <columns>rstkf__glbanktxn_trantype__c</columns>
        <columns>rstkf__glbanktxn_checknumb__c</columns>
        <columns>rstkf__glbanktxn_reconciled__c</columns>
        <columns>rstkf__glbanktxn_bankamt__c</columns>
        <columns>rstkf__glbanktxn_homeamt__c</columns>
        <columns>rstkf__glbanktxn_bankcurr__c</columns>
        <columns>rstkf__glbanktxn_txndate__c</columns>
        <columns>rstkf__glbanktxn_appayd__c</columns>
        <columns>rstkf__glbanktxn_tranid__c</columns>
        <columns>rstkf__glbanktxn_payamt__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glbanktxn_trantype__c</field>
            <operation>equals</operation>
            <value>Transfers/Adjustments Made by JE</value>
        </filters>
        <filters>
            <field>rstkf__glbanktxn_glbankacct__c</field>
            <operation>contains</operation>
            <value>us bank</value>
        </filters>
        <label>Bank Account Transactions - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Account Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>